VMERRORSHARE.TXT
        Info File src-tauri/src/platform/linux/runner/mpv.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
   Compiling colorwall-linux v0.1.0 (/home/laxenta/wallpaperengine-local/src-tauri)
error[E0308]: mismatched types
   --> src/platform/linux/layer_shell/surface.rs:102:33
    |
101 | ... let surface = wayland_egl::WlEglSurface::new(
    |                   ------------------------------ arguments to this function are incorrect
102 | ...     unit.get_wlsurface(),
    |         ^^^^^^^^^^^^^^^^^^^^ expected `ObjectId`, found `&WlSurface`
    |
note: associated function defined here
   --> /home/laxenta/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/wayland-egl-0.31.0/src/lib.rs:46:12
    |
 46 |     pub fn new(surface: ObjectId, width: i32, height: i3...
    |            ^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `colorwall-linux` (lib) due to 1 previous error
